// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSumary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totaling 
    $0.00
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $0.00
  </h1>
</div>
`;
